# first-FastApi

./: .gitignore  pyproject.toml
app/: main.py
app/api/: files.py  users.py
app/core/: config.py
