[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["evin zhao <zhaomingxuan96@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
pyjwt = "^2.9.0"
pydantic = "^2.9.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
passlib = "^1.7.4"
httpx = "^0.27.2"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
